--- a/Web Portfolio/styles.css
+++ b/Web Portfolio/styles.css
@@ -13,6 +13,7 @@ body {
   
 .container {
     max-width: 1280px;
+    text-align: center;
     margin: auto;
     padding: 20px;
     background-color: #12111b;
@@ -64,7 +65,13 @@ header h1 {
     background-color: white;
     color: black;
 }
-  
+
+.project {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+}
 section {
     padding: 20px 0;
   }
@@ -78,14 +85,13 @@ h2 {
   }
   
 footer {
-    background: #333;
+    background: #12111b;
     color: #fff;
     padding: 20px 0;
     text-align: center;
   }
 
-.sociallinks {
-    
-    text-align: center;
-
+.sociallinks img {
+    margin: 5%;
+    border-radius: 10px;
 }
